# proiectOOP

./: .gitignore  CMakeLists.txt  Eveniment.cpp  Eveniment.hpp  Locatie.cpp  Locatie.hpp  Meniu.cpp  Meniu.hpp  README.md  Tichet.cpp  Tichet.hpp  Utils.cpp  Utils.hpp  createPdf.py  eSportTickets.cpp  eSportTickets.hpp  eveniment.txt  evenimente.txt  locatii.txt  main.cpp  tichete.txt
